--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<java-version>1.8</java-version>
-		<org.springframework-version>5.0.4.RELEASE</org.springframework-version>
+		<org.springframework-version>5.3.1</org.springframework-version>
 		<org.aspectj-version>1.8.1</org.aspectj-version>
 	</properties>
 
@@ -26,12 +26,18 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
 		<!-- Spring Security (used for CSRF protection only) -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>5.0.0.RELEASE</version>
+			<version>5.4.2</version>
 		</dependency>
 
 		<!-- AspectJ -->
@@ -102,7 +108,7 @@
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>6.0.7.Final</version>
+			<version>6.1.6.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.el</groupId>
@@ -111,8 +117,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish</groupId>
-			<artifactId>javax.el</artifactId>
-			<version>3.0.1-b08</version>
+			<artifactId>jakarta.el</artifactId>
+			<version>4.0.0</version>
 		</dependency>
 
 		<!-- Joda Time Library -->
@@ -166,6 +172,7 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+	
 	</dependencies>
 
 	<build>
